spacing fixed

--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -43,7 +43,7 @@
     background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
     // Responsive Button hero style
     @include respond(phone) {
-      background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+
     }
   }
 
@@ -53,6 +53,8 @@
     // Responsive Button hover hero style
     @include respond(phone) {
       -webkit-text-fill-color: $secondary-color;
+      -webkit-text-fill-color: $white-color;
+    text-decoration: none;
     }
 
     &::after {
